src/test/resources/extension/invalid/trait/traitVarActualType.awsl
begin

trait int: SomeTrait is
    int someFunc(int a) is required
end

exit -1;

end